Modules integration and minor fixes
Co-authored-by: Igor Bobrukiewicz <igor.bobrukiewicz@gmail.com>
Co-authored-by: AMalinowska03 <242463@edu.p.lodz.pl>